docs/api/qiskit/0.37/qiskit.circuit.library.LinearPauliRotations.mdx
---
title: LinearPauliRotations
description: API reference for qiskit.circuit.library.LinearPauliRotations
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.LinearPauliRotations
---

# LinearPauliRotations

<Class id="qiskit.circuit.library.LinearPauliRotations" github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/library/arithmetic/linear_pauli_rotations.py" signature="LinearPauliRotations(num_state_qubits=None, slope=1, offset=0, basis='Y', name='LinRot')">
  Bases: [`qiskit.circuit.library.arithmetic.functional_pauli_rotations.FunctionalPauliRotations`](qiskit.circuit.library.FunctionalPauliRotations "qiskit.circuit.library.arithmetic.functional_pauli_rotations.FunctionalPauliRotations")

  Linearly-controlled X, Y or Z rotation.

  For a register of state qubits $|x\rangle$, a target qubit $|0\rangle$ and the basis `'Y'` this circuit acts as:

  ```python
      q_0: ─────────────────────────■───────── ... ──────────────────────
                                    │
                                    .
                                    │
  q_(n-1): ─────────────────────────┼───────── ... ───────────■──────────
            ┌────────────┐  ┌───────┴───────┐       ┌─────────┴─────────┐
      q_n: ─┤ RY(offset) ├──┤ RY(2^0 slope) ├  ...  ┤ RY(2^(n-1) slope) ├
            └────────────┘  └───────────────┘       └───────────────────┘
  ```

  This can for example be used to approximate linear functions, with $a/2 =$ `slope` and $b/2 =$ `offset` and the basis `'Y'`:

  $$
  |x\rangle |0\rangle \mapsto \cos(ax + b)|x\rangle|0\rangle + \sin(ax + b)|x\rangle |1\rangle
  $$

  Since for small arguments $\sin(x) \approx x$ this operator can be used to approximate linear functions.

  Create a new linear rotation circuit.

  **Parameters**

  *   **num\_state\_qubits** (`Optional`\[`int`]) – The number of qubits representing the state $|x\rangle$.
  *   **slope** (`float`) – The slope of the controlled rotation.
  *   **offset** (`float`) – The offset of the controlled rotation.
  *   **basis** (`str`) – The type of Pauli rotation (‘X’, ‘Y’, ‘Z’).
  *   **name** (`str`) – The name of the circuit object.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.

    **Return type**

    `List`\[[`AncillaQubit`](qiskit.circuit.AncillaQubit "qiskit.circuit.quantumregister.AncillaQubit")]
  </Attribute>

  ### basis

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.basis" name="basis">
    The kind of Pauli rotation to be used.

    Set the basis to ‘X’, ‘Y’ or ‘Z’ for controlled-X, -Y, or -Z rotations respectively.

    **Return type**

    `str`

    **Returns**

    The kind of Pauli rotation used in controlled rotation.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.calibrations" name="calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}

    **Return type**

    `dict`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.data" name="data" />

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.

    **Return type**

    `Union`\[[`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression"), `float`]
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.instances" name="instances" attributeValue="= 87" />

  ### metadata

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.metadata" name="metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.

    **Return type**

    `dict`
  </Attribute>

  ### num\_ancilla\_qubits

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.num_ancilla_qubits" name="num_ancilla_qubits">
    The minimum number of ancilla qubits in the circuit.

    **Return type**

    `int`

    **Returns**

    The minimal number of ancillas required.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.num_clbits" name="num_clbits">
    Return number of classical bits.

    **Return type**

    `int`
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.num_parameters" name="num_parameters">
    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.num_qubits" name="num_qubits">
    Return number of qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_state\_qubits

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.num_state_qubits" name="num_state_qubits">
    The number of state qubits representing the state $|x\rangle$.

    **Return type**

    `int`

    **Returns**

    The number of state qubits.
  </Attribute>

  ### offset

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.offset" name="offset">
    The angle of the single qubit offset rotation on the target qubit.

    Before applying the controlled rotations, a single rotation of angle `offset` is applied to the target qubit.

    **Return type**

    `float`

    **Returns**

    The offset angle.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.op_start_times" name="op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Return type**

    `List`\[`int`]

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    **AttributeError** – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.parameters" name="parameters">
    **Return type**

    `ParameterView`
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.qregs" name="qregs">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.

    **Return type**

    `List`\[[`Qubit`](qiskit.circuit.Qubit "qiskit.circuit.quantumregister.Qubit")]
  </Attribute>

  ### slope

  <Attribute id="qiskit.circuit.library.LinearPauliRotations.slope" name="slope">
    The multiplicative factor in the rotation angle of the controlled rotations.

    The rotation angles are `slope * 2^0`, `slope * 2^1`, … , `slope * 2^(n-1)` where `n` is the number of state qubits.

    **Return type**

    `float`

    **Returns**

    The rotation angle common in all controlled rotations.
  </Attribute>
</Class>

